// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Picker Time Picker renders 1`] = `
<div>
  <div
    class="time-picker"
  >
    <textarea
      class="time-picker__input"
      cols="27"
      rows="1"
      style="width: 240px;"
    >
      2021-01-20T14:34:31.425
    </textarea>
    <button
      class="bp4-button time-picker__date-picker-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-calendar"
        icon="calendar"
      >
        <svg
          data-icon="calendar"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Time Picker Time Picker renders with short format 1`] = `
<div>
  <div
    class="time-picker"
  >
    <textarea
      class="time-picker__input"
      cols="27"
      rows="1"
      style="width: 152px;"
    >
      2021-01-20T14:34
    </textarea>
    <button
      class="bp4-button time-picker__date-picker-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-calendar"
        icon="calendar"
      >
        <svg
          data-icon="calendar"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
